--- a/src/app/components/details/field-players-details/field-players-details.component.scss
+++ b/src/app/components/details/field-players-details/field-players-details.component.scss
@@ -10,7 +10,7 @@
     height: 100%;
     padding: 0 1rem;
     min-height: calc(98vh - 16.8rem);
-    padding-top: 2rem;
+    padding-top: 40px;
     position: relative;
 }
 
@@ -105,16 +105,11 @@ ul {
     font-weight: bold;
 }
 
-// .go_back {
-//     display: flex;
-//     justify-content: center;
-//     padding-bottom: 20px;
-// }
-
-.next_player {
+.navigation_players {
     display: flex;
     justify-content: center;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
+    padding-top: 20px;
 }
 
 .player_link {
@@ -128,6 +123,98 @@ ul {
     font-size: 0;
 }
 
+// .previous_player_nav__player {
+//     visibility: hidden;
+//     display: inline-block;
+//     vertical-align: top;
+//     position: relative;
+//     background-image: linear-gradient(270deg,#154284,#181733);
+// }
+
+// .previous_player_nav__name {
+//     font-size: 1rem;
+//     line-height: 3rem;
+//     max-width: 0;
+//     text-overflow: ellipsis;
+//     transition: max-width .3s ease-out, padding .3s ease-out;
+// }
+
+// .previous_player_nav_img {
+//     max-height: 5rem;
+//     // position: absolute;
+//     // bottom: 0;
+//     // padding-left: .5rem;
+//     position: absolute;
+//     bottom: 0;
+//     right: -8rem;
+//     padding-right: 1rem;
+//     transition: right .3s ease-out;
+// }
+
+// @media (min-width: 768px) {
+//     .player_link:hover {
+//         .previous_player_nav__name {
+//             max-width: 30rem;
+//             padding-right: 5rem;
+//             padding-left: .5rem;
+//         }
+
+//         .previous_player_nav_img {
+//             right: 0;
+//         }
+    
+//         .previous_player_nav__player {
+//             visibility: visible;
+//             opacity: 1;
+//         }
+//     }
+// }
+
+.next_player_nav__player {
+    display: inline-block;
+    visibility: hidden;
+    vertical-align: top;
+    position: relative;
+    background-image: linear-gradient(270deg, #154284, #181733);
+    opacity: 0;
+    transition: visibility .3s, opacity .3s linear;
+}
+
+.next_player_content {
+    display: flex;
+}
+
+.next_player_nav_img {
+    max-height: 5rem;
+    position: absolute;
+    bottom: 0;
+    padding-left: .5rem;
+    transition: left .3s ease-out;
+}
+
+.next_player_nav__name {
+    font-size: 1rem;
+    line-height: 3rem;
+    max-width: 0;
+    text-overflow: ellipsis;
+    transition: max-width .3s ease-out, padding .3s ease-out;
+}
+
+@media (min-width: 768px) {
+    .player_link:hover {
+        .next_player_nav__name {
+            max-width: 30rem;
+            padding-left: 5rem;
+            padding-right: .5rem;
+        }
+    
+        .next_player_nav__player {
+            visibility: visible;
+            opacity: 1;
+        }
+    }
+}
+
 .player_btn {
     width: 5rem;
     height: 3rem;
@@ -136,6 +223,14 @@ ul {
     display: inline-flex;
     fill: #fff;
     background: #0a0927;
+}
+
+.previous_player {
+    border-radius: 10px 0 0 10px;
+}
+
+.next_player {
+    border-radius: 0 10px 10px 0;
 }
 
 .back_to_squad_btn {
@@ -147,7 +242,17 @@ ul {
     align-items: center;
     display: inline-flex;
     background: #fff;
-    fill: #0a0927;
+    fill: #727272;
+}
+
+.back_to_squad_btn:hover {
+    background: #171631;
+    fill: #fff;
+    color: #fff;
+
+    .player-nav_btn-title {
+        color: #fff;
+    }
 }
 
 .icon {
@@ -195,7 +300,7 @@ ul {
 
 .content_media {
     padding: 25px;
-    background-image: url("../../../../assets/images/stripes.png");
+    // background-image: url("../../../../assets/images/stripes.png");
     background-size: contain;
     background-repeat: no-repeat;
 }
