--- a/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
+++ b/src/app/components/details/goalkeepers-details/goalkeepers-details.component.html
@@ -58,11 +58,9 @@
             </div>
         </div>
 
-        <!-- TODO -->
-        <!-- <img class="next_player_img" [src]="goalkeeper.detailsImg"> -->
-        <div class="next_player" *ngIf="id == 1">
+        <div class="navigation_players" *ngIf="id == 1">
             <a [routerLink]='"fieldPlayer/" + previousPlayerId' class="player_link">
-                <div class="player_btn">
+                <div class="player_btn previous_player">
                     <svg class="icon" viewBox="0 0 12.1 8.9">
                         <path d="M12.1 3.8v1.4H2.6l2.9 2.7-1 1L0 4.4 4.5 0l1 .9-3 2.9h9.6z"></path>
                     </svg>
@@ -79,7 +77,16 @@
                 </div>
             </a>
             <a [routerLink]='"goalkeeper/" + nextPlayerId' class="player_link">
-                <div class="player_btn">
+                <div class="next_player_nav__player">
+                    <div class="next_player_content">
+                        <img class="next_player_nav_img" [src]="nextPlayer.detailsImg">
+                        <div class="next_player_nav__name">
+                            <span class="next_player_name">{{ nextPlayer.name + " " + nextPlayer.surname}}</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="player_btn next_player">
                     <svg class="icon" viewBox="0 0 12.14 8.86">
                         <path fill-rule="evenodd"
                             d="M9.63 3.82L6.68.93 7.63 0l4.51 4.43-4.51 4.43-.95-.92 2.81-2.76H0V3.82h9.63z"></path>
@@ -88,14 +95,25 @@
             </a>
         </div>
 
-        <div class="next_player" *ngIf="id == 2">
+        <div class="navigation_players" *ngIf="id == 2">
             <a [routerLink]='"goalkeeper/" + previousPlayerId' class="player_link">
-                <div class="player_btn">
+                <div class="player_btn previous_player">
                     <svg class="icon" viewBox="0 0 12.1 8.9">
                         <path d="M12.1 3.8v1.4H2.6l2.9 2.7-1 1L0 4.4 4.5 0l1 .9-3 2.9h9.6z"></path>
                     </svg>
                 </div>
+                <!-- TODO -->
+                <!-- <div class="previous_player_nav__player">
+                    <div class="next_player_content">
+                        <div class="previous_player_nav__name">
+                            <span class="previous_player_name">{{ previousPlayer.name + " " +
+                                previousPlayer.surname}}</span>
+                        </div>
+                        <img class="previous_player_nav_img" [src]="previousPlayer.detailsImg">
+                    </div>
+                </div> -->
             </a>
+
             <a href="#" class="player_link">
                 <div class="back_to_squad_btn">
                     <svg class="icon" viewBox="0 0 20 18">
@@ -106,8 +124,18 @@
                     <span class="player-nav_btn-title">{{ 'team.squad' | translate }}</span>
                 </div>
             </a>
+
             <a [routerLink]='"fieldPlayer/" + nextPlayerId' class="player_link">
-                <div class="player_btn">
+                <div class="next_player_nav__player">
+                    <div class="next_player_content">
+                        <img class="next_player_nav_img" [src]="nextPlayer.detailsImg">
+                        <div class="next_player_nav__name">
+                            <span class="next_player_name">{{ nextPlayer.name + " " + nextPlayer.surname}}</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="player_btn next_player">
                     <svg class="icon" viewBox="0 0 12.14 8.86">
                         <path fill-rule="evenodd"
                             d="M9.63 3.82L6.68.93 7.63 0l4.51 4.43-4.51 4.43-.95-.92 2.81-2.76H0V3.82h9.63z"></path>
